# walker_planner

./: .gitignore  CMakeLists.txt  README.md  generate_map_start_goals.sh  package.xml  proj.rviz  run_cobandits_experiments_easy.sh  run_experiments.sh  run_test.sh  run_tests.sh  run_train.sh  setup.py
config/: collision_model_walker.yaml  rosconsole.config  smpl_visual.ini  walker.mprim  walker_arm.mprim  walker_base.mprim  walker_multi_rep.mprim  walker_multi_rep_base.mprim  walker_multi_rep_right_arm.mprim  walker_multi_rep_right_arm_small.mprim  walker_right_arm.mprim  walker_right_arm.yaml
cvae/: model.py  model_constants.py  requirements.txt  run.py  train.py
data/: proj_env.env  solution_path495.txt
env/: multi_room_map.env  multi_room_map.yaml  tables_map.yaml  tabletop.env
experiments/: walker_goal.yaml  walker_goal_custom_home.yaml  walker_goal_mrmha.yaml
include/: collision_space_scene.h  context.h  context_features.h  cvae_scheduling_policies.h  cvae_scheduling_policy.h  get_collision_objects.h  motion_planner.h  motion_planner_ros.h  planner_config.h  publish_path.h  scheduling_policies.h  start_goal_generator.h  utils.h  walker_planner.h
include/config/: collision_space_scene.h  get_collision_objects.h  planner_config.h
include/detail/: context_features.hpp  cvae_scheduling_policies.hpp  motion_planner_ros.hpp  scheduling_policies.hpp
include/heuristics/: walker_heuristics.h
include/planners/: mhaplanner.h  mhaplanner_single_param.h  mrmhaplanner.h  mrmhaplanner_bandits.h  mrmhaplanner_cobandits.h  mrmhaplanner_dts.h  mrmhaplanner_meta_a.h  mrmhaplanner_meta_mha.h  rmhaplanner.h
include/planners/detail/: mhaplanner.hpp  mrmhaplanner.hpp  mrmhaplanner_bandits.hpp  mrmhaplanner_cobandits.hpp  mrmhaplanner_dts.hpp  mrmhaplanner_meta_a.hpp  mrmhaplanner_meta_mha.hpp
include/utils/: start_goal_generator.h  utils.h
include/utils/detail/: start_goal_generator.hpp
launch/: debug_planner.launch  estimate_fullbody_delta_h.launch  generate_map.launch  generate_start_goals.launch  interactive_walker_model.launch  load_pointcloud.launch  mhaplanner.launch  mhaplanner_single_param.launch  mrmhaplanner.launch  mrmhaplanner_cobandits.launch  mrmhaplanner_cobandits_train.launch  mrmhaplanner_dts.launch  mrmhaplanner_hdts.launch  mrmhaplanner_meta_a.launch  mrmhaplanner_meta_mha.launch  mrmhaplanner_meta_mha_train.launch  mrmhaplanner_rdts.launch  mrmhaplanner_ucb.launch  planning_context_walker.launch  run_mrmha_rr_planner.launch  run_mrmha_unirand_planner.launch  test_fk.launch  test_ik.launch  test_mha_planner.launch  test_motion_planner.launch  test_mrmha_cvae.launch  test_ompl_planner.launch  test_rmha_planner.launch  test_templated_mrmha_planner.launch  visualize_walker_collision_model.launch  walker_collision_model_visualizer.launch  walker_interface_mrmha.launch  walker_interface_planner.launch  walker_planner.launch  walker_planner_mrmha.launch
learning/: estimate_delta_h.py  learn_beta.py  predictDeltaH.py  predict_rewards.py  process_collisions.py  process_paths.py  utils.py
msg/: GraspPose.msg  Path1.msg
python/: delta_h_service.py
src/: collision_model_visualizer.cpp  cvae_scheduling_policies.cpp  debug_planner.cpp  generate_start_goals.cpp  get_collision_objects.cpp  interactive_walker_model.cpp  motion_planner.cpp  motion_planner_ros.cpp  planner_config.cpp  scheduling_policies.cpp  start_goal_generator.cpp  test_ik.cpp  test_mha_planner.cpp  test_motion_planner.cpp  test_ompl_planner.cpp  test_walker_interface.cpp  walker_interface_mrmha.cpp  walker_interface_planner.cpp  walker_planner.cpp  walker_planner_mrmha.cpp
src/config/: collision_space_scene.cpp  get_collision_objects.cpp  planner_config.cpp
src/debug/: collision_model_visualizer.cpp  debug_planner.cpp
src/heuristics/: walker_heuristics.cpp
src/mha/: estimate_fullbody_delta_h.cpp  mhaplanner.cpp  mhaplanner_single_param.cpp  mrmhaplanner.cpp  mrmhaplanner_cobandits.cpp  mrmhaplanner_cobandits_train.cpp  mrmhaplanner_dts.cpp  mrmhaplanner_hdts.cpp  mrmhaplanner_meta_a.cpp  mrmhaplanner_meta_mha.cpp  mrmhaplanner_meta_mha_test.cpp  mrmhaplanner_meta_mha_train.cpp  mrmhaplanner_rdts.cpp  mrmhaplanner_ucb.cpp  run_mrmha_rr_planner.cpp  run_mrmha_unirand_planner.cpp  test_mha_planner.cpp  test_motion_planner.cpp  test_mrmha_planner.cpp  test_mrmha_rr_planner.cpp  test_rmha_planner.cpp  walker_planner.cpp
src/planners/: mrmhaplanner.cpp  rmhaplanner.cpp  rmrmhaplanner.cpp
src/utils/: generate_map.cpp  generate_start_goals.cpp  start_goal_generator.cpp  utils.cpp
srv/: DeltaH.srv
test/: test_fk.cpp  test_ik.cpp  test_mrmha_cvae.cpp  test_mrmhaplanner.cpp  test_start_goal_generator.cpp
